# GPL-boundary

./: .gitmodules  CLAUDE.md  Cargo.toml  DEVELOPER-GUIDANCE.md  GUIDANCE.md  GUIDANCE_API_LIBRARY.md  GUIDANCE_INTEGRATE.md  GUIDANCE_PARITY_TESTS.md  Makefile  README.md  REPORT-fasttree-cfcfd94-thread-safety-regression.md  REPORT-fasttree-library-cli-divergence.md  build.rs  install.sh
.github/workflows/: ci.yml  release.yml
localdocs/: DESIGN-batched-streaming.md  ISSUE-bowtie2-sigsegv-macos-aarch64.md  ISSUE-sortmerna-rocksdb-macos.md  OBSERVATION-batching.md  REPLY-bowtie2-sigsegv-investigation-v2.md
scripts/: pre-commit  subset-phylip-to-fasta.py
src/: arrow_ipc.rs  main.rs  protocol.rs  registry.rs  shm.rs  test_util.rs  workers.rs
src/tools/: bowtie2_align.rs  bowtie2_build.rs  bowtie2_ffi.rs  fasttree.rs  mod.rs  prodigal.rs  sortmerna.rs
tests/: bowtie2_build.rs  build_sanity.rs  streaming.rs  subprocess.rs
