[package]
name = "gpl-boundary"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-or-later"
description = "Process-isolation boundary for GPL-licensed bioinformatics tools"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
arrow = { version = "58", default-features = false, features = ["ipc", "ffi"] }
libc = "0.2"

[build-dependencies]
cc = "1"

[dev-dependencies]
tempfile = "3"

[[bin]]
name = "gpl-boundary"
path = "src/main.rs"
