[package]
name = "gpl-boundary"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-or-later"
description = "Process-isolation boundary for GPL-licensed bioinformatics tools"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
arrow = { version = "58", default-features = false, features = ["ipc", "ffi"] }
inventory = "0.3"
libc = "0.2"
# tempfile is used by bowtie2_build to materialize Arrow input as a FASTA
# tempfile before invoking the bowtie2 C builder (which only accepts disk
# paths). TODO(phase-6): remove this once bowtie2's C API gains an in-memory
# bt2_build_input_t, per the Phase 1 follow-up in PLAN-p0-gaps-tdd.md.
tempfile = "3"

[build-dependencies]
cc = "1"
cmake = "0.1"

[dev-dependencies]

[[bin]]
name = "gpl-boundary"
path = "src/main.rs"
